[tool.poetry]
name = "anglo-dashboard"
version = "0.1.0"
description = ""
authors = ["Gustavo Almeida <gusalmeida93@gmail.com>"]
readme = "README.md"
packages = [{include = "anglo_dashboard"}]

[tool.poetry.dependencies]
python = ">=3.9.17"
streamlit = "^1.25.0"
jupyter = "^1.0.0"
pandas = "^2.0.3"
gspread = "^5.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
