[tool.poetry]
name = "anglo-dashboard"
version = "0.1.0"
description = ""
authors = ["Gustavo Almeida <gusalmeida93@gmail.com>"]
readme = "README.md"
packages = [{include = "anglo_dashboard"}]

[tool.poetry.dependencies]
python = ">=3.9.17"
streamlit = "^1.25.0"
jupyter = "^1.0.0"
pandas = "^2.0.3"
requests = "^2.31.0"
office365-rest-python-client = "^2.4.3"
openpyxl = "^3.1.2"
plotly = "^5.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
